tests/int/use_command/snapshots/integration__int__use_command__flags__modules_glob_showcase_flags_r_e_grouped.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - glob_showcase
    - "-r"
    - "-e"
    - "--grouped"
---
success: true
exit_code: 0
----- stdout -----
glob_showcase
 - crate::file_module::*
 - crate::inline_modules::*
 - crate::nesting::level1::level2::*
glob_showcase::api
glob_showcase::config
glob_showcase::config::all
 - crate::glob_showcase::config::client::*
 - crate::glob_showcase::config::logging::*
 - crate::glob_showcase::config::server::*
glob_showcase::config::client
glob_showcase::config::logging
glob_showcase::config::server
glob_showcase::database
glob_showcase::database::connection
glob_showcase::database::query
glob_showcase::database::transaction
glob_showcase::errors
glob_showcase::models
glob_showcase::prelude
 - crate::glob_showcase::ErrorKind
 - crate::glob_showcase::Status
 - crate::glob_showcase::api::delete_data
 - crate::glob_showcase::api::get_data
 - crate::glob_showcase::api::set_data
 - crate::glob_showcase::database::connect
 - crate::glob_showcase::database::disconnect
 - crate::glob_showcase::database::execute
 - crate::glob_showcase::errors::NotFoundError
 - crate::glob_showcase::errors::ValidationError
 - crate::glob_showcase::models::Comment
 - crate::glob_showcase::models::Post
 - crate::glob_showcase::models::User
 - crate::glob_showcase::traits::Identifiable
 - crate::glob_showcase::traits::Nameable
 - crate::glob_showcase::traits::Validatable
 - crate::glob_showcase::utils::math::add
 - crate::glob_showcase::utils::math::subtract
glob_showcase::traits
glob_showcase::utils
glob_showcase::utils::collection
glob_showcase::utils::math
glob_showcase::utils::string

----- stderr -----
