tests/int/use_command/snapshots/integration__int__use_command__flags__modules_glob_showcase_flags_r_e_resolve-globs.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - glob_showcase
    - "-r"
    - "-e"
    - "--resolve-globs"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module::greet
crate::file_module::nesting_depth
crate::glob_showcase::ErrorKind
crate::glob_showcase::Status
crate::glob_showcase::api::API_ENDPOINT
crate::glob_showcase::api::API_MAX_RETRIES
crate::glob_showcase::api::API_TIMEOUT
crate::glob_showcase::api::clear_all
crate::glob_showcase::api::count
crate::glob_showcase::api::delete_data
crate::glob_showcase::api::exists
crate::glob_showcase::api::get_data
crate::glob_showcase::api::list_all
crate::glob_showcase::api::set_data
crate::glob_showcase::api::update_data
crate::glob_showcase::config::all::*
crate::glob_showcase::config::client::*
crate::glob_showcase::config::logging::*
crate::glob_showcase::config::server::*
crate::glob_showcase::database::connect
crate::glob_showcase::database::connection
crate::glob_showcase::database::connection::*
crate::glob_showcase::database::disconnect
crate::glob_showcase::database::execute
crate::glob_showcase::database::query
crate::glob_showcase::database::query::*
crate::glob_showcase::database::transaction
crate::glob_showcase::database::transaction::*
crate::glob_showcase::errors::AuthenticationError
crate::glob_showcase::errors::ErrorKind
crate::glob_showcase::errors::NotFoundError
crate::glob_showcase::errors::Result
crate::glob_showcase::errors::ValidationError
crate::glob_showcase::models::Category
crate::glob_showcase::models::Comment
crate::glob_showcase::models::CommentId
crate::glob_showcase::models::Post
crate::glob_showcase::models::PostId
crate::glob_showcase::models::Status
crate::glob_showcase::models::Tag
crate::glob_showcase::models::User
crate::glob_showcase::models::UserId
crate::glob_showcase::traits::Identifiable
crate::glob_showcase::traits::Nameable
crate::glob_showcase::traits::Serializable
crate::glob_showcase::traits::Timestamped
crate::glob_showcase::traits::Validatable
crate::glob_showcase::utils::collection::*
crate::glob_showcase::utils::math::*
crate::glob_showcase::utils::math::add
crate::glob_showcase::utils::math::divide
crate::glob_showcase::utils::math::multiply
crate::glob_showcase::utils::math::subtract
crate::glob_showcase::utils::string::*
crate::glob_showcase::utils::string::lowercase
crate::glob_showcase::utils::string::uppercase
crate::inline_modules::inner
crate::inline_modules::nested
crate::inline_modules::outer
crate::inline_modules::sibling_greet
crate::inline_modules::use_private
crate::nesting::level1::level2::depth
crate::nesting::level1::level2::level3
crate::nesting::level1::level2::root_depth

----- stderr -----
