tests/int/use_command/snapshots/integration__int__use_command__flags__modules_inline_modules_flags_e.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - inline_modules
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module::greet
crate::inline_modules::private_inline::_secret

----- stderr -----
