tests/int/use_command/snapshots/integration__int__use_command__flags__modules_inline_modules_flags_r.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - inline_modules
    - "-r"
---
success: true
exit_code: 0
----- stdout -----
crate::dir_module::greet
crate::empty_module
crate::file_module
crate::file_module::greet
crate::inline_modules::outer::file_child::greet
crate::inline_modules::private_inline::_secret

----- stderr -----
